# ijkplayer

./: .gitignore  COPYING.LGPLv2.1.txt
android/ijkplayer/ijkplayer-example/: CMakeLists.txt  build.gradle
android/ijkplayer/ijkplayer-example/all32/release/: output.json
android/ijkplayer/ijkplayer-example/src/androidTest/java/com/readsense/media/rtsp/: ApplicationTest.java
android/ijkplayer/ijkplayer-example/src/main/: AndroidManifest.xml
android/ijkplayer/ijkplayer-example/src/main/cpp/: BodyAnalyzeJNI.cpp
android/ijkplayer/ijkplayer-example/src/main/cpp/include/: BodyAnalyzeJNI.h
android/ijkplayer/ijkplayer-example/src/main/java/cn/readsense/body/: Body.java  ReadBody.java  SupportImageFormat.java
android/ijkplayer/ijkplayer-example/src/main/java/com/readsense/: MidnightReceiver.java
android/ijkplayer/ijkplayer-example/src/main/java/com/readsense/media/: App.java  Receiver.java
android/ijkplayer/ijkplayer-example/src/main/jni/: ControlGate.cpp  ReadHead.cpp  main.cpp
android/ijkplayer/ijkplayer-example/src/main/jni/include/: cn_readsense_head_ReadHead.h  com_readsense_app_control_ControlGate.h  readsense_head_tracking.h  xtype.h
android/ijkplayer/ijkplayer-example/src/main/jniLibs/armeabi-v7a/: libbodysense.so.bak
android/ijkplayer/ijkplayer-example/src/main/res/layout/: activity_app.xml  activity_main.xml  activity_player.xml  body_reco_settings.xml
android/ijkplayer/ijkplayer-example/src/main/res/values/: attrs.xml  colors.xml  strings.xml
android/ijkplayer/ijkplayer-example/src/main/res/xml/: settings.xml
config/: module-lite.sh  (+1 more)
(+85 files in other folders)
